# agentproc

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EVALUATION.md  HANDOFF.md  README.md  SECURITY.md
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/cli/: index.md
docs/examples/: bare.md  claude.md  index.md
docs/guide/: getting-started.md  troubleshooting.md  what-is-agentproc.md
docs/hub/: index.md
docs/public/: llms-full.txt  llms.txt  robots.txt
docs/scripts/: build-llms-full.mjs
docs/sdk/: index.md  node.md  python.md  rust.md
docs/spec/: index.md
docs/zh/: index.md
docs/zh/cli/: index.md
docs/zh/examples/: bare.md  claude.md  index.md
docs/zh/guide/: getting-started.md  troubleshooting.md  what-is-agentproc.md
docs/zh/hub/: index.md
docs/zh/sdk/: index.md  node.md  python.md  rust.md
docs/zh/spec/: index.md
examples/bash/: echo_agent.sh
examples/node/: claude_bridge.js
examples/python/: claude_bridge.py
hub/: PERMISSIONS.md  README.md
hub/_shared/: README.md  stream_utils.js  stream_utils.py
hub/agy/: README.md  bridge.js  bridge.py  profile.yaml
hub/aider/: README.md  bridge.js  bridge.py  profile.yaml
hub/claude-code/: README.md  bridge.js  bridge.py  permission_map.test.js  profile.yaml
hub/codebuddy/: README.md  bridge.js  bridge.py  profile.yaml
hub/codex/: README.md  bridge.js  bridge.py  permission_hook.py  permission_map.js  permission_map.test.js  profile.yaml
hub/cursor/: README.md  bridge.js  bridge.py  profile.yaml
hub/deepseek/: README.md  bridge.js  bridge.py  profile.yaml
hub/echo-agent/: README.md  bridge.js  bridge.py  bridge.sh  profile.yaml
hub/gemini-cli/: README.md  bridge.js  bridge.py  profile.yaml
hub/grok-build/: README.md  bridge.js  bridge.py  profile.yaml
hub/kimi-code/: README.md  bridge.js  bridge.py  profile.yaml
hub/opencode/: README.md  bridge.js  bridge.py  profile.yaml
hub/pi/: README.md  bridge.js  bridge.py  profile.yaml
hub/qwen-code/: README.md  bridge.js  bridge.py  profile.yaml
hub/recursive/: README.md  bridge.js  bridge.py  profile.yaml
hub/recursive/tests/: parity.json  test_bridge_parity.js  test_bridge_parity.py
sdk/node/: package-lock.json  package.json
sdk/node/scripts/: prepare-hub.js
sdk/node/src/: _hub_bridge_harness.js  cli.js  conformance.test.js  diagnostics.test.js  executors.js  executors.test.js  hub.js  hub.test.js  hub_bridge_conformance.test.js  index.d.ts  index.js  index.test.js  runner.js  runner.test.js  scenarios.test.js  sdk.test.js  sdk_harness.js  yaml.js
sdk/python/: pyproject.toml
sdk/python/scripts/: prepare_hub.py
sdk/python/src/agentproc/: __init__.py  cli.py  executors.py  hub.py  runner.py  yaml.py
sdk/python/tests/: _sdk_harness.py  test_agentproc.py  test_bridges.py  test_conformance.py  test_diagnostics.py  test_executors.py  test_hub.py  test_hub_bridge_conformance.py  test_runner.py  test_scenarios.py  test_sdk.py  test_yaml.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: run_profile.rs  sdk_harness.rs
sdk/rust/src/: conformance.rs  env.rs  error.rs  executors.rs  history.rs  lib.rs  profile.rs  protocol.rs  runner.rs
sdk/rust/tests/: official_hub_profiles.rs  spawn_path.rs
spec/: protocol.md  protocol.zh.md
spec/conformance/: README.md  cases.json  diagnostics.json  hub_bridge.json  scenarios.json  sdk.json
spec/proposals/: 0.4-result-and-session-field.md
