[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "agentproc"
version = "0.4.0"
description = "AgentProc Protocol SDK + CLI — connect any Agent CLI to a messaging platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.scripts]
agentproc = "agentproc.cli:main"

[project.urls]
Homepage = "https://github.com/jeffkit/agentproc"
Documentation = "https://agentproc.dev/"
Repository = "https://github.com/jeffkit/agentproc"
Issues = "https://github.com/jeffkit/agentproc/issues"

[tool.setuptools.packages.find]
where = ["src"]
