[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "agentproc"
version = "0.6.0"
description = "AgentProc Protocol SDK + CLI — connect any Agent CLI to a messaging platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["PyYAML>=5.1"]

[project.scripts]
agentproc = "agentproc.cli:main"

[project.urls]
Homepage = "https://github.com/jeffkit/agentproc"
Documentation = "https://agentproc.dev/"
Repository = "https://github.com/jeffkit/agentproc"
Issues = "https://github.com/jeffkit/agentproc/issues"

[tool.setuptools.packages.find]
where = ["src"]

# The bundled hub/ profiles (copied into src/agentproc/hub_data/ by
# scripts/prepare_hub.py before build) so `hub run`/`hub list` work offline.
[tool.setuptools.package-data]
agentproc = ["hub_data/**/*", "hub_data/*"]
