[package]
name = "agentproc"
version = "0.10.0"
edition = "2021"
description = "AgentProc Protocol SDK — connect any Agent CLI to a messaging platform (Rust)"
license = "MIT"
repository = "https://github.com/jeffkit/agentproc"
homepage = "https://agentproc.dev"
documentation = "https://docs.rs/agentproc"
keywords = ["agentproc", "agent", "bridge", "protocol", "cli"]
categories = ["web-programming", "network-programming"]
readme = "README.md"

[features]
default = ["executors", "yaml"]
# Built-in executor registry (codex, claude-code, ...). Disable to ship a
# minimal runner that only handles command/args spawn profiles.
executors = []
# Profile YAML parsing. Disable to depend only on &Profile structs built
# programmatically (drops serde_yaml).
yaml = ["serde_yaml"]

[dependencies]
tokio = { version = "1", features = ["process", "io-util", "rt", "sync", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }
thiserror = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[[example]]
name = "sdk_harness"
path = "examples/sdk_harness.rs"

[[example]]
name = "run_profile"
path = "examples/run_profile.rs"
